[gd_scene load_steps=55 format=2]

[ext_resource path="res://assets/enimies/skeleton/walk/go_4.png" type="Texture" id=1]
[ext_resource path="res://assets/enimies/skeleton/walk/go_2.png" type="Texture" id=2]
[ext_resource path="res://assets/enimies/skeleton/attack/hit_2.png" type="Texture" id=3]
[ext_resource path="res://assets/enimies/skeleton/walk/go_5.png" type="Texture" id=4]
[ext_resource path="res://assets/enimies/skeleton/attack/hit_4.png" type="Texture" id=5]
[ext_resource path="res://assets/enimies/skeleton/attack/hit_3.png" type="Texture" id=6]
[ext_resource path="res://assets/enimies/skeleton/walk/go_1.png" type="Texture" id=7]
[ext_resource path="res://assets/enimies/skeleton/attack/hit_1.png" type="Texture" id=8]
[ext_resource path="res://assets/enimies/skeleton/walk/go_3.png" type="Texture" id=9]
[ext_resource path="res://assets/enimies/skeleton/walk/go_6.png" type="Texture" id=10]
[ext_resource path="res://assets/enimies/skeleton/walk/go_7.png" type="Texture" id=11]
[ext_resource path="res://assets/enimies/skeleton/walk/go_8.png" type="Texture" id=12]
[ext_resource path="res://assets/enimies/skeleton/attack/hit_5.png" type="Texture" id=13]
[ext_resource path="res://assets/enimies/skeleton/attack/hit_6.png" type="Texture" id=14]
[ext_resource path="res://assets/enimies/skeleton/attack/hit_7.png" type="Texture" id=15]
[ext_resource path="res://assets/enimies/skeleton/attack/hit_8.png" type="Texture" id=16]
[ext_resource path="res://src/actors/Skeleton.gd" type="Script" id=17]
[ext_resource path="res://assets/enimies/skeleton/appear/appear_2.png" type="Texture" id=18]
[ext_resource path="res://assets/enimies/skeleton/idle/idle_2.png" type="Texture" id=19]
[ext_resource path="res://assets/enimies/skeleton/die/die_4.png" type="Texture" id=20]
[ext_resource path="res://assets/enimies/skeleton/appear/appear_1.png" type="Texture" id=21]
[ext_resource path="res://assets/enimies/skeleton/appear/appear_3.png" type="Texture" id=22]
[ext_resource path="res://assets/enimies/skeleton/idle/idle_1.png" type="Texture" id=23]
[ext_resource path="res://assets/enimies/skeleton/die/die_1.png" type="Texture" id=24]
[ext_resource path="res://assets/enimies/skeleton/die/die_3.png" type="Texture" id=25]
[ext_resource path="res://assets/enimies/skeleton/die/die_2.png" type="Texture" id=26]
[ext_resource path="res://assets/enimies/skeleton/appear/appear_4.png" type="Texture" id=27]
[ext_resource path="res://assets/enimies/skeleton/idle/idle_4.png" type="Texture" id=28]
[ext_resource path="res://assets/enimies/skeleton/die/die_7.png" type="Texture" id=29]
[ext_resource path="res://assets/enimies/skeleton/die/die_8.png" type="Texture" id=30]
[ext_resource path="res://assets/enimies/skeleton/die/die_5.png" type="Texture" id=31]
[ext_resource path="res://assets/enimies/skeleton/die/die_6.png" type="Texture" id=32]
[ext_resource path="res://assets/enimies/skeleton/idle/idle_3.png" type="Texture" id=33]
[ext_resource path="res://assets/enimies/skeleton/appear/appear_5.png" type="Texture" id=34]
[ext_resource path="res://assets/enimies/skeleton/appear/appear_6.png" type="Texture" id=35]
[ext_resource path="res://assets/enimies/skeleton/appear/appear_7.png" type="Texture" id=36]
[ext_resource path="res://assets/enimies/skeleton/appear/appear_8.png" type="Texture" id=37]
[ext_resource path="res://assets/enimies/skeleton/appear/appear_9.png" type="Texture" id=38]
[ext_resource path="res://assets/enimies/skeleton/idle/idle_5.png" type="Texture" id=39]
[ext_resource path="res://assets/enimies/skeleton/appear/appear_10.png" type="Texture" id=40]
[ext_resource path="res://assets/enimies/skeleton/idle/idle_6.png" type="Texture" id=41]
[ext_resource path="res://assets/music/движение скелета.ogg" type="AudioStream" id=42]
[ext_resource path="res://assets/music/скелет рассыпается на землю.ogg" type="AudioStream" id=43]
[ext_resource path="res://assets/music/скелет лезет из могилы.ogg" type="AudioStream" id=44]
[ext_resource path="res://assets/music/Sound_16662.ogg" type="AudioStream" id=45]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 23 ), ExtResource( 19 ), ExtResource( 33 ), ExtResource( 28 ), ExtResource( 39 ), ExtResource( 41 ) ],
"loop": false,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": false,
"name": "attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 26 ), ExtResource( 25 ), ExtResource( 20 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 29 ), ExtResource( 30 ) ],
"loop": false,
"name": "die",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 18 ), ExtResource( 22 ), ExtResource( 27 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 40 ) ],
"loop": false,
"name": "appear",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 2 ), ExtResource( 9 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": false,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32.3667, 78.5858 )

[sub_resource type="Animation" id=3]
resource_name = "appear"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "appear", "appear" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 9 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:collision_layer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 2 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:collision_mask")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 8, 9 ]
}
tracks/5/type = "method"
tracks/5/path = NodePath("AudioEnter")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
}, {
"args": [  ],
"method": "stop"
} ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "attack", "attack" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 7 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("AudioAttack")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.4, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
}, {
"args": [  ],
"method": "stop"
} ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "die", "die" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 7 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:collision_layer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:collision_mask")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/5/type = "method"
tracks/5/path = NodePath("AudioDie")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
}, {
"args": [  ],
"method": "stop"
} ]
}

[sub_resource type="Animation" id=6]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "idle", "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 5 ]
}

[sub_resource type="Animation" id=7]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "walk", "walk" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 7 ]
}

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 24.3879, 35.7459 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 25.194, 32.5338 )

[node name="Skeleton" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 41
script = ExtResource( 17 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 9.75348, 7.70012 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/appear = SubResource( 3 )
anims/attack = SubResource( 4 )
anims/die = SubResource( 5 )
anims/idle = SubResource( 6 )
anims/walk = SubResource( 7 )

[node name="AttackBox" type="Area2D" parent="."]
monitorable = false
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackBox"]
position = Vector2( -45.0353, 51.0042 )
shape = SubResource( 8 )

[node name="HitBox" type="Area2D" parent="."]
monitorable = false
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( -43.8907, 54.6195 )
shape = SubResource( 9 )
disabled = true

[node name="DieTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 26.2595, -2.9618 )
scale = Vector2( 5.34754, 8.95241 )
process_parent = true
physics_process_parent = true

[node name="AudioMove" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 42 )
pitch_scale = 1.79
area_mask = 2

[node name="AudioDie" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 43 )
area_mask = 2

[node name="AudioEnter" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 44 )
area_mask = 2

[node name="AudioAttack" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 45 )
area_mask = 2
[connection signal="body_entered" from="AttackBox" to="." method="_on_AttackBox_body_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="timeout" from="DieTimer" to="." method="_on_DieTimer_timeout"]
